--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     </header>
 
     <main>
-        <section class="w-10/12 m-auto">
+        <section class="w-full lg:w-10/12 m-auto">
             <div class="p-4 m-auto flex flex-col gap-4">
                 <h1 class="py-4 text-4xl font-bold">WOMEN JACKET</h1>
-                <div class="grid grid-cols-[240px] m-auto sm:grid-cols-2 md:grid-cols-3 gap-4">
+                <div class="grid grid-cols-[260px] m-auto sm:grid-cols-2 md:grid-cols-3 gap-4">
                     
                     <div class=" flex flex-col justify-center items-center p-4 border rounded-lg shadow-xl">
                         <div class="p-2 border rounded-lg bg-slate-300"><img class="w-full h-full" src="images/jacket-1.png" alt="">
@@ -79,7 +79,7 @@
             </div>
             <div class="p-4 m-auto flex flex-col gap-4">
                 <h1 class="py-4 text-4xl font-bold">MEN JACKET</h1>
-                <div class="grid grid-cols-[240px] m-auto sm:grid-cols-2 md:grid-cols-3 gap-4">
+                <div class="grid grid-cols-[260px] m-auto sm:grid-cols-2 md:grid-cols-3 gap-4">
                     
                     <div class=" flex flex-col  justify-center items-center p-4 border rounded-lg shadow-xl">
                         <div class="p-2 border rounded-lg bg-slate-300"><img class="w-full h-full" src="images/jacket-4.png" alt="">
