--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
         <section class="flex p-4 justify-center items-center">
             <div class="w-2/4 flex flex-col gap-1 md:gap-4">
-                <h1 class="text-2xl md:text-5xl font-bold"><span class="text-yellow-500">BE THE PENGUIN</span> <br> OF WINTER</h1>
+                <h1 class="text-3xl md:text-5xl font-bold"><span class="text-yellow-500">BE THE PENGUIN</span> <br> OF WINTER</h1>
                 <p class="text-xs sm:text-xl md:text-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, praesentium?</p>
                 <div>
                     <button class="bg-lime-700 my-1 py-1 px-2 md:py-2 md:px-4 text-white border rounded-md hover:bg-lime-600">Buy Now</button>
@@ -41,7 +41,7 @@
     <main>
         <section class="w-full lg:w-10/12 m-auto">
             <div class="p-4 m-auto flex flex-col gap-4">
-                <h1 class="py-4 text-4xl font-bold">WOMEN JACKET</h1>
+                <h1 class="py-4 text-3xl md:text-4xl font-bold">WOMEN JACKET</h1>
                 <div class="grid grid-cols-[260px] m-auto sm:grid-cols-2 md:grid-cols-3 gap-4">
                     
                     <div class=" flex flex-col justify-center items-center p-4 border rounded-lg shadow-xl">
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="p-4 m-auto flex flex-col gap-4">
-                <h1 class="py-4 text-4xl font-bold">MEN JACKET</h1>
+                <h1 class="py-4 text-3xl md:text-4xl font-bold">MEN JACKET</h1>
                 <div class="grid grid-cols-[260px] m-auto sm:grid-cols-2 md:grid-cols-3 gap-4">
                     
                     <div class=" flex flex-col  justify-center items-center p-4 border rounded-lg shadow-xl">
