--- a/index.html
+++ b/index.html
@@ -145,5 +145,9 @@
             </div>
         </section>
     </main>
+
+    <footer class="text-center py-4">
+        <p>All Rights Reserved by Penguin Fashion Hub.</p>
+    </footer>
 </body>
 </html>
